syntax = "proto3";

package chef.automate.domain.data_feed;
option go_package = "github.com/chef/automate/api/config/data_feed";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "data-feed-service"};

	V1 v1 = 1;

	message V1 {
		System sys = 1;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			chef.automate.infra.config.TLSCredentials tls = 2;
			Service service = 3;
			Log log = 4;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10105, protocol: "grpc" } ];
				google.protobuf.StringValue feed_interval = 3;
				google.protobuf.Int32Value asset_page_size = 4;
				google.protobuf.Int32Value reports_page_size = 5;
				google.protobuf.Int32Value node_batch_size = 6;
				google.protobuf.BoolValue updated_nodes_only = 7;
				google.protobuf.BoolValue disable_cidr_filter = 8;
				google.protobuf.StringValue cidr_filter = 9;
				google.protobuf.StringValue external_fqdn = 10;
				repeated google.protobuf.Int32Value accepted_status_codes = 11;
				google.protobuf.StringValue content_type = 12;
			}

			message Log {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}

		}
	}
}
